Edit DataFire project

--- a/DataFire.yml
+++ b/DataFire.yml
@@ -19,3 +19,9 @@ paths:
     get:
       action: giphy/getGifById
       accounts: {}
+tests:
+  test:
+    action: giphy/getGifById
+    accounts: {}
+    input:
+      gifId: 0
