Edit DataFire project

--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     ]
   },
   "dependencies": {
-    "@datafire/giphy": "5.0.0"
+    "@datafire/giphy": "5.0.0",
+    "@datafire/pivotaltracker": "4.0.0"
   },
   "name": "wordbuybigmouthpublications",
   "version": "1.0.0"
