--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,18 @@
 version: 2.1
 
 orbs:
- android: circleci/android@0.2.0
+  node: circleci/node@4.1
+  # The Node.js orb contains a set of prepackaged CircleCI configuration you can utilize
+  # See the orb's test job here: https://circleci.com/developer/orbs/orb/circleci/node#jobs-test
 
-jobs:
-  build:
-    executor: android/android
-        
-    steps:
-      - checkout
-      - run:
-          command: ./gradlew build
+workflows:
+  sample:
+    jobs:
+      - node/test:
+          matrix:
+            parameters:
+              version: ['15.1', 'lts', '12.21']
+          # For more information about matrix testing see the detailed blog post:
+          # https://circleci.com/blog/circleci-matrix-jobs/
+          # or the configuration reference:
+          # https://circleci.com/docs/2.0/configuration-reference/?section=reference#matrix-requires-version-21
